# agent-eval-demo

./: .gitignore  CLI_USAGE.md  README.md  cli.py  jllm_eval.py  pyproject.toml  ragchecker_eval.py  simple_math_agent.py  text_to_sql_agent.py  text_to_sql_setup.py  text_to_sql_workflows.py
WikiTableQuestions_TableInfo/: 0_progressive_rock_album_chart_positions.json  10_bbc_radio_service_costs_comparison.json  11_french_airports_usage_summary.json  12_voter_party_affiliation_summary.json  13_norwegian_club_performance_statistics.json  14_horse_racing_derby_winners.json  15_grammy_awards_summary_for_artist.json  16_boxing_match_results_summary.json  17_historical_college_football_team_performance.json  18_yamato_population_density_summary.json  19_voter_party_affiliation_statistics.json  1_filmography_of_diane.json  20_actress_award_nominations_and_wins.json  21_uk_ministerial_offices_and_titles.json  23_euro_football_team_performance.json  25_monthly_climate_statistics.json  26_italian_government_term_summary.json  27_new_mexico_government_officials.json  28_monthly_climate_statistics_summary.json  29_experiment_drop_events_timeline.json  2_annual_fatalities_and_accidents.json  32_ohio_private_school_admissions.json  33_cancer_related_genetic_factors.json  3_academy_awards_and_nominations_1972.json  4_theatrical_awards_nominations.json  6_south_dakota_radio_stations.json  7_missing_persons_case_summary.json  8_music_single_chart_performance.json  9_kodachrome_film_types_and_dates.json
img/: workflows2_text_to_sql_table_retrieval.html
